# vivid-ml

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
src/: operator_registrations.cpp
tests/: CMakeLists.txt  test_pose_detector.cpp  test_tensor.cpp
